# EcoPluse-AI

./: .flake8  .gitignore  Makefile  README.md  TEAM.md  __init__.py  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
analytics/: __init__.py  alerts.py  health_score.py  planner.py  prediction.py
api/: __init__.py  app.py  models.py  routes.py
docs/: CONTRIBUTING.md  README.md
ecopulse_ai/: __init__.py  alerts.py  config.py  main.py
ecopulse_ai/analytics/: planner.py
ecopulse_ai/api/: app.py
ecopulse_ai/kafka/: __init__.py  producer.py
ecopulse_ai/rag/: copilot.py  prompts.py
ecopulse_ai/reports/: generator.py
ecopulse_ai/streaming/: anomaly.py  pathway_pipeline.py
kafka/: producer.py
rag/: __init__.py  copilot.py  document_store.py
reports/: __init__.py  generator.py
streaming/: __init__.py  pathway_pipeline.py
tests/: __init__.py  test_entrypoint.py  test_structure.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_alerts.py  test_analytics.py  test_health.py
